--- a/templates/Test_Resume.html
+++ b/templates/Test_Resume.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="../static/css/nav_bar.css">
         <link rel="stylesheet" href="../static/css/test_resume.css">
         <link rel="stylesheet" href="../static/css/footer.css">
+        <link rel="stylesheet" href="../static/css/error-panel.css">
 
         <!-- Rubik font -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -203,4 +204,5 @@
         <script src="../static/javascript/session_management.js"></script>
         <!-- <script src="../static/javascript/test.js"></script> -->
     </body>
+
 </html>
