--- a/templates/Verify_email.html
+++ b/templates/Verify_email.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ResumeOnly - Verify Email</title>
         <link rel="stylesheet" href="../static/css/Verify_email.css">
+        <link rel="stylesheet" href="../static/css/error-panel.css">
 
         <!-- Rubik font -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -37,4 +38,5 @@
 
         <script src="../static/javascript/Verify_email.js"></script>
     </body>
+
 </html>
