--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="../static/css/nav_bar.css">
         <link rel="stylesheet" href="../static/css/main_page.css">
         <link rel="stylesheet" href="../static/css/footer.css">
+        <link rel="stylesheet" href="../static/css/error-panel.css">
         
         <!-- Rubik font -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -104,4 +105,5 @@
         <script src="../static/javascript/main_page.js"></script>
         <script src="../static/javascript/session_management.js"></script>
     </body>
+
 </html>
