--- a/templates/portfolio.html
+++ b/templates/portfolio.html
@@ -18,6 +18,8 @@
         <link rel="stylesheet" href="../static/css/portfolio/skills_panel.css">
         <link rel="stylesheet" href="../static/css/portfolio/footer.css">
         <link rel="stylesheet" href="../static/css/portfolio/other.css">
+
+        <link rel="stylesheet" href="../static/css/error-panel.css">
         
         <!-- Rubik font -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -130,4 +132,5 @@
 
 <!-- ! Done -->
 <!-- > loading circle after the submit button -->
+
 <!-- > error handling for every fetch, catch -->
