--- a/templates/portfolio_site.html
+++ b/templates/portfolio_site.html
@@ -18,6 +18,7 @@
         <link rel="stylesheet" href="../static/css/portfolio/skills_panel.css">
         <link rel="stylesheet" href="../static/css/portfolio/footer.css">
         <link rel="stylesheet" href="../static/css/portfolio/other.css">
+        <link rel="stylesheet" href="../static/css/error-panel.css">
         
         <!-- Rubik font -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -39,4 +40,5 @@
         <script src="../static/javascript/portfolio/other.js"></script>
     </body>
 </html>
+
 
