--- a/templates/profile.html
+++ b/templates/profile.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="../static/css/nav_bar.css">
         <link rel="stylesheet" href="../static/css/profile.css">
         <link rel="stylesheet" href="../static/css/footer.css">
+        <link rel="stylesheet" href="../static/css/error-panel.css">
 
         <!-- Rubik font -->
         <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -152,4 +153,5 @@
         <script src="../static/javascript/profile.js"></script>
         <script src="../static/javascript/session_management.js"></script>
     </body>
+
 </html>
