--- a/templates/Verify_email.html
+++ b/templates/Verify_email.html
@@ -36,7 +36,9 @@
             </form>
         </main>
 
+        <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
         <script src="../static/javascript/Verify_email.js"></script>
     </body>
 
 </html>
+
